changes in workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,18 +7,35 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [15.x]
+    env:
+      BUCKET: codojo-s3
+      DIST: build
+      REGION: us-east-1
+      DIST_ID: EX2DNKQ3BIWPH
+
     steps:
-      - uses: actions/checkout@v1
-      - run: npm install
-      - run: npm run build
-      - uses: jakejarvis/s3-sync-action@master
-        env:
-          AWS_S3_BUCKET: ${{secrets.AWS_S3_BUCKET}}
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: us-east-1
-          SOURCE_DIR: build
+      - name: Checkout
+        uses: actions/checkout/@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{env.REGION}}
+
+      - name: Install Dependencies 
+        run: npm install
+
+      - name: Build Static Website
+        run: npm run build
+
+      - name: Copy files to the production website with the AWS CLI
+        run: aws s3 sync --delete ${{env.DIST}} s3://${{env.BUCKET}}
+
+      - name: Invalidate the cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{env.DIST_ID}} \
+            --paths "/*"
           
