--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "local": "env-cmd -e LOCAL npm run start"
+    "local": "env-cmd -e LOCAL npm run start",
+    "production": "env-cmd -e LOCAL npm run build"
   },
   "eslintConfig": {
     "extends": [
