--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "local": "env-cmd -e LOCAL npm run start",
-    "production": "env-cmd -e LOCAL npm run build"
+    "pro": "env-cmd -e LOCAL npm run build"
   },
   "eslintConfig": {
     "extends": [
