--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   },
   "scripts": { 
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:pro": "env-cmd -e LOCAL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "local": "env-cmd -e LOCAL npm run start",
-    "pro": "env-cmd -e LOCAL npm run build"
+    "local": "env-cmd -e LOCAL npm run start"
   },
   "eslintConfig": {
     "extends": [
