--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": { 
     "start": "react-scripts start",
-    "build:pro": "env-cmd -e LOCAL react-scripts build",
+    "build": "env-cmd -e LOCAL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "local": "env-cmd -e LOCAL npm run start"
