--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "local": "env-cmd -e LOCAL npm run start",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test:e2e": "npx cypress run"
   },
   "eslintConfig": {
     "extends": [
