--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 
 # misc
 .DS_Store
+.env
 .env.*
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -42,6 +42,3 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
-
-#cypress
-cypress.config.js
