--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,11 +32,8 @@ jobs:
 
       - name: E2E Test
         uses: cypress-io/github-action@v4
-        with:
-          browser: chrome
-          headless: true
-          start: npm start
-          wait-on: http://localhost:3000
+        with: 
+          command: npm run test:e2e
 
       - name: Copy files to the production website with the AWS CLI
         run: aws s3 sync --delete ${{env.DIST}} s3://${{env.BUCKET}}
