--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: E2E Test
         uses: cypress-io/github-action@v4
+        env:
+          CYPRESS_cognito_username: ${{secrets.CYPRESS_EMAIL_TEST}}
+          CYPRESS_cognito_password: ${{secrets.CYPRESS_PASSWORD_TEST}}
         with: 
           command: npm run test:e2e
 
