--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,14 +61,13 @@ jobs:
   deploy:
     needs: [e2e_test]
     runs-on: ubuntu-latest
+    env:
+      DIST: build
     steps: 
       - name: Checkout
         uses: actions/checkout/@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
