--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '16'
       - name: Install Dependencies 
         run: npm ci
       - name: Build Static Website
@@ -45,7 +45,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 16  
+          node-version: '16'  
       - uses: actions/download-artifact@v3
         with:
           name: dist
@@ -64,6 +64,8 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -71,7 +73,6 @@ jobs:
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
       - name: Deploy to S3 Bucket 
-        if: ${{github.event_name == 'push'}}
         run: aws s3 sync --delete ${{env.DIST}} s3://${{secrets.AWS_S3_BUCKET}}
       - name: Invalidate the cache
         run: |
