--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,7 +60,7 @@ jobs:
     needs: [e2e_test]
     runs-on: ubuntu-latest
     env:
-      DIST: build
+      DIST: dist
     steps: 
       - name: Checkout
         uses: actions/checkout/@v3
