--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,7 +65,7 @@ jobs:
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
       - name: Deploy to S3 Bucket 
-        run: aws s3 sync --delete ${{env.DIST}} s3://${{secrets.AWS_S3_BUCKET}}
+        run: aws s3 sync --delete ${{env.DIST}} s3://codojo-S3
       - name: Invalidate the cache
         run: |
           aws cloudfront create-invalidation \
