--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,8 +59,6 @@ jobs:
   deploy:
     needs: [e2e_test]
     runs-on: ubuntu-latest
-    env:
-      DIST: dist
     steps: 
       - name: Checkout
         uses: actions/checkout/@v3
@@ -72,8 +70,12 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
-      - name: Deploy to S3 Bucket 
-        run: aws s3 sync --delete ${{env.DIST}} s3://codojo-s3
+      - name: Deploy to S3 Bucket
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+        run: aws s3 sync ./dist/ s3://codojo-s3 --delete
       - name: Invalidate the cache
         run: |
           aws cloudfront create-invalidation \
