--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -70,8 +70,12 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
       - name: Deploy to S3 Bucket
-        run: aws s3 sync ./dist/ s3://codojo-s3 --delete
+        run: aws s3 sync dist s3://codojo-s3 --delete
       - name: Invalidate the cache
         run: |
           aws cloudfront create-invalidation \
