--- a/package.json
+++ b/package.json
@@ -49,15 +49,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
     "cypress": "^11.0.1",
     "react-refresh": "^0.14.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "style-loader": "^3.3.1"
   }
 }
