--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-
+# Cancel Previous Redundant Builds
   avoid_reduncy:
     runs-on: ubuntu-latest
     steps: 
@@ -15,7 +15,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{github.token}}
-
+ # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
     steps: 
@@ -35,6 +35,7 @@ jobs:
           name: build
           path: build
 
+# Test components
   e2e_test:
     needs: [build]
     runs-on: ubuntu-latest
@@ -55,9 +56,9 @@ jobs:
         env:
           CYPRESS_cognito_username: ${{secrets.CYPRESS_EMAIL_TEST}}
           CYPRESS_cognito_password: ${{secrets.CYPRESS_PASSWORD_TEST}}
-    
+ # Deploy artifact to AWS
   deploy:
-    needs: [e2e_test]
+    needs: [e2e_test, build]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
@@ -76,9 +77,4 @@ jobs:
           path: build
       - name: Deploy to S3 Bucket
         run: aws s3 sync build s3://${{secrets.AWS_S3_BUCKET}} --delete
-      - name: Invalidate the cache
-        run: |
-          AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation \
-            --distribution-id ${{secrets.AWS_DIST_ID}} \
-            --paths "/*"
           
