update with eslint and prettier

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,32 +1,22 @@
 {
-  "auth": {
-    "UIlogin": {
-      "service": "Cognito",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [],
-      "customAuth": false,
-      "frontendAuthConfig": {
-        "socialProviders": [],
-        "usernameAttributes": [
-          "EMAIL"
-        ],
-        "signupAttributes": [
-          "EMAIL",
-          "FAMILY_NAME",
-          "NAME"
-        ],
-        "passwordProtectionSettings": {
-          "passwordPolicyMinLength": 8,
-          "passwordPolicyCharacters": []
-        },
-        "mfaConfiguration": "OFF",
-        "mfaTypes": [
-          "SMS"
-        ],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
-      }
-    }
-  }
+	"auth": {
+		"UIlogin": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [],
+			"customAuth": false,
+			"frontendAuthConfig": {
+				"socialProviders": [],
+				"usernameAttributes": ["EMAIL"],
+				"signupAttributes": ["EMAIL", "FAMILY_NAME", "NAME"],
+				"passwordProtectionSettings": {
+					"passwordPolicyMinLength": 8,
+					"passwordPolicyCharacters": []
+				},
+				"mfaConfiguration": "OFF",
+				"mfaTypes": ["SMS"],
+				"verificationMechanisms": ["EMAIL"]
+			}
+		}
+	}
 }
