--- a/package.json
+++ b/package.json
@@ -1,56 +1,66 @@
 {
-  "name": "uilogin",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@aws-amplify/ui-react": "^3.6.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "10.4.5",
-    "aws-amplify": "^4.3.43",
-    "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
-    "dotenv": "^16.0.3",
-    "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-google-button": "^0.7.2",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "local": "env-cmd -e LOCAL npm run start",
-    "cypress:open": "cypress open",
-    "test:e2e": "npx cypress run"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
-    "cypress": "^11.0.1",
-    "react-refresh": "^0.14.0"
-  }
+	"name": "uilogin",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@aws-amplify/ui-react": "^3.6.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"autoprefixer": "10.4.5",
+		"aws-amplify": "^4.3.43",
+		"axios": "^1.1.3",
+		"bootstrap": "^5.2.2",
+		"dotenv": "^16.0.3",
+		"jwt-decode": "^3.1.2",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.6.0",
+		"react-dom": "^18.2.0",
+		"react-google-button": "^0.7.2",
+		"react-router-dom": "^6.4.3",
+		"react-scripts": "5.0.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"local": "env-cmd -e LOCAL npm run start",
+		"cypress:open": "cypress open",
+		"test:e2e": "npx cypress run",
+		"format": "prettier --write .",
+		"lint": "eslint --fix . --ext .js,.jsx"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
+		"cypress": "^11.0.1",
+		"eslint": "^8.27.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.5.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.31.10",
+		"prettier": "^2.7.1",
+		"react-refresh": "^0.14.0"
+	}
 }
