--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -30,5 +30,13 @@
         ]
       }
     }
+  },
+  "storage": {
+    "uilogin0adc9b56": {
+      "service": "S3",
+      "serviceType": "imported",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
