--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,5 +76,10 @@ jobs:
           name: build
           path: build
       - name: Deploy to S3 Bucket
-        run: aws s3 sync build s3://${{secrets.AWS_S3_BUCKET}} --delete
+        run: aws s3 sync --delete build s3://${{secrets.AWS_S3_BUCKET}}
+      - name: Invalidate the cache
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{secrets.AWS_DIST_ID}} \
+            --paths "/*"
           
