--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"useTabs": true,
 	"bracketSpacing": true,
 	"singleQuote": true,
-	"jsxSingleQuote": true
+	"jsxSingleQuote": true,
+	"semi":true
 }
