--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -91,6 +91,7 @@ jobs:
           name: build
           path: build
       - name: Deploy to S3 Bucket
+        if: ${{ github.event_name == 'push' }}
         run: aws s3 sync --delete build s3://${{secrets.AWS_S3_BUCKET}}
       - name: Invalidate the cache
         run: |
