--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,7 +36,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         env:
