add test to google auth

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -87,7 +87,7 @@ jobs:
           CYPRESS_cognito_password: ${{secrets.CYPRESS_PASSWORD_TEST}}
           CYPRESS_googleClientId: ${{secrets.GOOGLE_CLIENT_ID}}
           CYPRESS_googleRefreshToken: ${{secrets.GOOGLE_REFRESH_TOKEN}}
-          CYPRESS_googleClientSecret: ${{secrets.GOOGLE_CLIENT_SECRET}
+          CYPRESS_googleClientSecret: ${{secrets.GOOGLE_CLIENT_SECRET}}
  # Deploy artifact to AWS
   deploy:
     needs: [e2e_test, build]
