--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,7 +37,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
+      - name: Check for vulnerabilities in the code
+        run: npm run snyk:code
+      - name: Check open source vulnerabilities and license issues
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
