--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"react-dom": "^18.2.0",
 		"react-google-button": "^0.7.2",
 		"react-router-dom": "^6.4.3",
-		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -30,7 +29,8 @@
 		"cypress:open": "cypress open",
 		"test:e2e": "npx cypress run",
 		"format": "prettier --write .",
-		"lint": "eslint src/**/*.js"
+		"lint": "eslint src/**/*.js",
+		"snyk:code": "snyk code test"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -51,6 +51,7 @@
 		]
 	},
 	"devDependencies": {
+		"react-scripts": "5.0.1",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
 		"cypress": "^11.0.1",
 		"eslint": "^8.27.0",
