--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+      - name: Install Dependencies 
+        run: npm ci
       - name: Check for vulnerabilities in the code
         run: npm run snyk:code
       - name: Check open source vulnerabilities and license issues
