--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,9 +36,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-      - name: Install Dependencies 
-        run: npm ci
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
       - name: Check for vulnerabilities in the code
         run: npm run snyk:code
       - name: Check open source vulnerabilities and license issues
