--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,6 +42,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Install Dependencies 
+        run: npm ci
       - name: Check for vulnerabilities in the code
         run: npm run snyk:code
       - name: Check open source vulnerabilities and license issues
