--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install Dependencies 
         run: npm ci
       - name: Check for vulnerabilities in the code
-        run: npm run snyk:code
+        run: npm run snyk
       - name: Check open source vulnerabilities and license issues
         uses: snyk/actions/node@master
         env:
