--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master 
-      - uses: snyk/actions/node@master
+      - uses: snyk/actions/setup@master
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
