--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,17 +36,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master 
+        uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - uses: snyk/actions/setup@master
-      - uses: actions/setup-go@v1
         with:
-          go-version: '1.13'
-      - name: Check for vulnerabilities in the code
-        run: snyk code test
-      - name: Check open source vulnerabilities and license issues
-        run: snyk test
+          args: code test --severity-threshold=low
 
  # Creates a build and uploads an artifact
   build:
