--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
+node_modules/
+aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
