--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"dotenv": "^16.0.3",
+		"env-cmd": "^10.1.0",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
@@ -30,7 +31,8 @@
 		"test:e2e": "npx cypress run",
 		"format": "prettier --write .",
 		"lint": "eslint src/**/*.js",
-		"snyk": "snyk code test"
+		"snyk": "snyk code test",
+		"pro": "env-cmd -e PRODUCTION npm run build"
 	},
 	"eslintConfig": {
 		"extends": [
