--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,8 +57,9 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci
+      - run: touch ./src/aws-exports.js
       - name: Build Static Website
-        run: npm run pro
+        run: npm run build
       - uses: actions/upload-artifact@v3
         with:
           name: build
