--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,9 +57,8 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci
-      - run: touch ./src/aws-exports.js
       - name: Build Static Website
-        run: npm run build
+        run: npm run pro
       - uses: actions/upload-artifact@v3
         with:
           name: build
@@ -81,7 +80,6 @@ jobs:
         with:
           name: build
           path: build
-      - run: touch ./src/aws-exports.js
       - name: E2E Test
         uses: cypress-io/github-action@v4
         env:
