--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install Dependencies 
         run: npm ci
       - name: Build Static Website
-        run: npm run pro
+        run: npm run build
       - uses: actions/upload-artifact@v3
         with:
           name: build
