--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,6 +57,7 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci
+      - run: touch ./src/aws-exports.js
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
