--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -105,6 +105,7 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
+      - run: touch ./src/aws-exports.js
       - uses: actions/download-artifact@v3
         with:
           name: build
