--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-dom": "^18.2.0",
 		"react-google-button": "^0.7.2",
 		"react-router-dom": "^6.4.3",
+		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -64,7 +65,6 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.31.10",
 		"prettier": "^2.7.1",
-		"react-refresh": "^0.14.0",
-		"react-scripts": "5.0.1"
+		"react-refresh": "^0.14.0"
 	}
 }
