--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,14 +30,6 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
-      - name: Send Slack Notification on Failure
-        if: ${{ failure() }}
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,author,eventName,workflow,job,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
 #Configure security actions with snyk
   security:
@@ -50,15 +42,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=low
-      - name: Send Slack Notification on Failure
-        if: ${{ failure() }}
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,author,eventName,workflow,job,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}    
+          args: --severity-threshold=low  
 
  # Creates a build and uploads an artifact
   build:
@@ -73,20 +57,13 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci
+      - run: touch ./src/aws-exports.js
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
         with:
           name: build
           path: build
-      - name: Send Slack Notification on Failure
-        if: ${{ failure() }}
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,author,eventName,workflow,job,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
 # Test components
   e2e_test:
@@ -113,14 +90,6 @@ jobs:
           CYPRESS_googleClientId: ${{secrets.GOOGLE_CLIENT_ID}}
           CYPRESS_googleRefreshToken: ${{secrets.GOOGLE_REFRESH_TOKEN}}
           CYPRESS_googleClientSecret: ${{secrets.GOOGLE_CLIENT_SECRET}}
-      - name: Send Slack Notification on Failure
-        if: ${{ failure() }}
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,author,eventName,workflow,job,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
  # Deploy artifact to AWS
   deploy:
     needs: [e2e_test, build]
@@ -136,6 +105,7 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
+      - run: touch ./src/aws-exports.js
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -148,11 +118,3 @@ jobs:
           aws cloudfront create-invalidation \
             --distribution-id ${{secrets.AWS_DIST_ID}} \
             --paths "/*"
-      - name: Send Slack Notification on Failure
-        if: ${{ failure() }}
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,author,eventName,workflow,job,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
