--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,9 +57,8 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci
-      - run: touch ./src/aws-exports.js
       - name: Build Static Website
-        run: npm run build
+        run: npm run pro
       - uses: actions/upload-artifact@v3
         with:
           name: build
@@ -77,7 +76,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./src/aws-exports.js
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -107,7 +105,6 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
-      - run: touch ./src/aws-exports.js
       - uses: actions/download-artifact@v3
         with:
           name: build
