--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,7 +56,8 @@ jobs:
         with:
           node-version: '16'
       - name: Install Dependencies 
-        run: npm ci
+        run: npm ci 
+      - run: touch .env-cmdrc.json
       - name: Build Static Website
         run: npm run pro
       - uses: actions/upload-artifact@v3
@@ -76,6 +77,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - run: touch .env-cmdrc.json
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -105,6 +107,7 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
+      - run: touch .env-cmdrc.json
       - uses: actions/download-artifact@v3
         with:
           name: build
