--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,7 +57,7 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm ci 
-      - run: touch ./.env-cmdrc
+      - run: touch ./.env.production
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
