--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./.env.production
+      - run: touch ./.env
       - name: Install Dependencies 
         run: npm ci 
       - name: Build Static Website
@@ -77,7 +77,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./.env-cmdrc.json
       - uses: actions/download-artifact@v3
         with:
           name: build
